# factorio-randovania-mod

./: .gitignore  .pre-commit-config.yaml  README.md  control.lua  data-updates.lua  data.lua  info.json  pyproject.toml
.github/workflows/: python.yml
locale/en/: strings.cfg
lua_src/: control.lua  data-updates.lua  data.lua
lua_src/locale/en/: strings.cfg
lua_src/prototypes/: burners.lua
src/factorio_randovania_mod/: __init__.py  __main__.py  cli.py  color_util.py  configuration.pyi  creator.py  factorio_formats.py  layout_data.py  layout_string.py  locale_lib.py  lua_util.py  mod_lua_api.py  mod_zip.py  schema.py
src/factorio_randovania_mod/__pyinstaller/: hook-factorio_randovania_mod.py
src/factorio_randovania_mod/files/: schema.json
src/factorio_randovania_mod/lua_src/: Blob.lua  Blob.meta.lua  control.lua  data-updates.lua  data.lua  info.json  layout.lua  settings.lua
src/factorio_randovania_mod/lua_src/locale/en/: strings.cfg
src/factorio_randovania_mod/lua_src/prototypes/: burners.lua  extra-tiers.lua  handcraft.lua  modules.lua  tech.lua
tests/: conftest.py  test_color_util.py  test_creator.py  test_factorio_formats.py  test_layout_string.py  test_mod_lua_api.py
tests/test_files/: empty.json  patcher_a.json
tools/: mipmap.py
