[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "factorio-randovania-mod"
authors = [
    {name = "Henrique Gemignani Passos Lima"},
]
description = "Generator of Factorio Randomizer mods for Randovania"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    # For rotating hue of images
    "pillow",
    "numpy",
]

# Entry Points for PyInstaller
[project.entry-points.pyinstaller40]
hook-dirs = "factorio_randovania_mod.__pyinstaller:get_hook_dirs"


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pre-commit",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/randovania/factorio-randovania-mod"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/factorio_randovania_mod/version.py"
git_describe_command = "git describe --dirty --tags --long --match v[0-9]*"